--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run build",
+    "predeploy": "npm run export",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
