--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "NEXT_PUBLIC_DEPLOY_TARGET=gh-pages next build && next export",
+    "export": "next build",  
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run export",
