--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "export": "next build",  
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run export",
+    "predeploy": "NEXT_PUBLIC_DEPLOY_TARGET=gh-pages npm run build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
