--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,10 @@ jobs:
         run: |
           cd frontend
           npm run predeploy
-          ls -la frontend/out  # Ensure the output directory exists
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: frontend/out  # Ensure correct output folder
+          folder: frontend/out
           clean: true
-          token: ${{ secrets.GH_PAGES_DEPLOY_TOKEN }}
