--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Grant write permissions to allow pushing to the repo
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -30,4 +33,3 @@ jobs:
           folder: frontend/out
           clean: true
           token: ${{ secrets.GITHUB_TOKEN }}
-
