--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,3 +33,6 @@ jobs:
           folder: frontend/out
           clean: true
           token: ${{ secrets.GITHUB_TOKEN }}
+          exclude_assets: 'backend/venv/**'
+
+
