--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,25 +5,21 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read      
-  pages: write        
-  id-token: write     
+  contents: read      # Allows reading the repo
+  pages: write        # Allows writing to gh-pages
+  id-token: write     # Required for OpenID Connect (needed by deploy-pages)
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v3
-        with:
-          sparse-checkout: |
-            frontend/
-          sparse-checkout-cone-mode: false
 
-      - name: Set up Node.js
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 20 # Ensure compatibility with Next.js
 
       - name: Install dependencies
         run: |
@@ -33,23 +29,22 @@ jobs:
       - name: Build project
         run: |
           cd frontend
-          npm run predeploy 
+          npm run predeploy  # Ensure the output goes to ./frontend/out
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v1
         with:
           path: ./frontend/out
+      
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     environment:
-      name: github-pages  
+      name: github-pages  # This fixes the "Missing environment" error
     permissions:
       pages: write
-      id-token: write  
+      id-token: write  # Required for deploy-pages action
     steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
-        with:
-          artifact_name: github-pages
+        uses: actions/deploy-pages@v1
