--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build",  
+    "export": "next build",
     "start": "next start",
     "lint": "next lint",
     "predeploy": "NEXT_PUBLIC_DEPLOY_TARGET=gh-pages npm run build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
