--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
+    "export": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "NEXT_PUBLIC_DEPLOY_TARGET=gh-pages npm run export",
+    "predeploy": "NEXT_PUBLIC_DEPLOY_TARGET=gh-pages npm run build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
