--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,5 +24,5 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   },
-  "homepage": "https://StanleyTK.github.io/MyCalendar"
+  "homepage": "https://StanleyTK.github.io/SmartPlanner"
 }
